# ticketing-app

./: .env.example  Cargo.toml  README.md
seed/: main.rs
src/: config.rs  db.rs  lib.rs  main.rs
src/models/: admin.rs  event.rs  mod.rs  order.rs
src/routes/: admin.rs  mod.rs  public.rs
src/utils/: auth.rs  midtrans.rs  mod.rs
