[package]
name = "ticketing-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seed"
path = "seed/main.rs"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
bson = { version = "2.8", features = ["chrono-0_4"] }
tokio = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenvy = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json"] }
rocket_cors = "0.6.0"
futures = "0.3.31"
base64 = "0.22.1"
anyhow = "1.0.100"
